cupon and next function modified

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
                             <div id="cupon-container" class="">
                                 <label class="input  flex items-center gap-2">
-                                    <input id="cupon-code" type="text" class="grow" placeholder="Have any copupon?" />
+                                    <input id="cupon-code" type="text" class="grow" placeholder="Have any copupon?" disabled/>
                                     <button id="cupon-apply" class=" text-white px-8 py-2 rounded-xl bg-[#1DD100]">Apply</button>
                                     
                                 </label>
@@ -381,7 +381,7 @@
                             </div>
 
                             <div>
-                                <button id="submit" class=" text-white p-6  rounded-xl bg-[#1DD100] w-full" >Next</button>
+                                <button id="submit" class=" text-white p-6  rounded-xl bg-[#1DD100] w-full" disabled>Next</button>
                             </div>
 
                             <div class="flex justify-around my-4">
