minor correction added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1 class="mb-5 text-5xl font-bold">End-to-End Travel with </h1>
                     <h1 class="mb-5 text-5xl font-bold text-[#1DD100]">P Paribahan </h1>
                     <p class="mb-5">Paharika express is the reliable paribahan service in our country. You can enjoy a very pleasing journey</p>
-                    <button class="py-4 px-8 bg-[#1DD100] font-bold text-black rounded-xl">Buy Tickets</button>
+                    <a href="#ticket-counter"><button class="py-4 px-8 bg-[#1DD100] font-bold text-black rounded-xl">Buy Tickets</button></a>
                   </div>
                 </div>
               </div>
@@ -127,7 +127,7 @@
 
         <!--====================================
          =========dashboard======================= -->
-         <section class="border-t-4 border-[#1DD100] rounded-[100px] bg-[#F7F8F8] pb-24">
+         <section id="ticket-counter" class="border-t-4 border-[#1DD100] rounded-[100px] bg-[#F7F8F8] pb-24">
             <div class="w-4/5 mx-auto">
 
                 <div>
@@ -177,8 +177,8 @@
                             <hr class="border border-gray-300 border-dashed">
                             <div class="flex justify-between">
                                 <button class="text-base font-medium p-4 rounded-xl bg-[#0307120D]">Boarding Point - Laxmipur</button>
-                                <button class="text-base font-medium p-4 rounded-xl bg-[#0307120D]">Boarding Point - Laxmipur</button>
-                                <button class="text-base font-medium p-4 rounded-xl bg-[#0307120D]">Boarding Point - Laxmipur</button>
+                                <button class="text-base font-medium p-4 rounded-xl bg-[#0307120D]">Dropping Point - Bogura</button>
+                                <button class="text-base font-medium p-4 rounded-xl bg-[#0307120D]">Est. Time - 11 Hour</button>
                             </div>
                         </div>
 
